# PDCLib

./: .hgignore  CMakeLists.txt
functions/: CMakeLists.txt
includes/: CMakeLists.txt  locale.h
internals/: _PDCLIB_aux.h
opt/: CMakeLists.txt
platform/: CMakeLists.txt
platform/example/: CMakeLists.txt
